<resources>
    <string name="app_name">Review</string>

    <string name="start_service">startService</string>
    <string name="stop_service">stopService</string>
    <string name="bind_service">bindService</string>
    <string name="unbind_service">unBindService</string>

    <string name="tv2">ConstraintLayout 完全解析 快来优化你的布局吧</string>
    <string name="activity_life">Activity 的生命周期</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="cancel">取消</string>
    <string name="tab_host_text1">继承TabActivity</string>
    <string name="tab_host_text2">在布局文件中使用TabHost</string>
    <string name="tab_host_text3">Tab的内容分开到单独的xml文件</string>
    <string name="placeholder_count">总计%d</string>
    <string name="label">标签</string>
    <!--OPenGl-->
    <string name="open_gl_stl">读取stl文件，显示3D模型</string>
    <string name="open_gl_triangle">android 3D 三角形</string>


    <!--RecyclerView的LayoutManager-->
    <string name="grid">GridLayoutManager</string>
    <string name="linear">LinearLayoutManager</string>
    <string name="staggeredGrid">StaggeredGridLayoutManager</string>
    <string name="fan">FanLayoutManager</string>
    <string name="carousel">CarouselLayoutManager</string>
    <string name="chips">ChipsLayoutManager</string>
    <string name="hive">HiveLayoutManager</string>
    <string name="vLayout">vLayout</string>
    <string name="flexBox">flexBox-layout</string>
    <string name="londonEye">LondonEyeLayoutManager</string>
    <string name="ZLayout">ZLayoutManager</string>
    <string name="gallery">GalleryLayoutManager</string>
    <string name="custom">CustomLayoutManager</string>


    <!--动画-->
    <string name="custom_progress">自定义进度条</string>
    <string name="bezier_curve">波浪动画&#8212;贝塞尔曲线实现</string>
    <string name="sin_cos">波浪动画&#8212;正余弦函数实现</string>
    <string name="water">水波（雷达）扩散效果</string>
    <string name="button_animation">按钮自定义动画</string>
    <string name="sticky_ball">粘性小球</string>
    <string name="mounted">吸顶效果&#8212;一行代码实现</string>
    <string name="reveal_animation">揭露动画</string>
    <!--计算器-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">÷</string>
    <string name="multply">×</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="C">C</string>
    <string name="DEL">DEL</string>


    <string name="menu_next">下一首播放</string>
    <string name="menu_add">添加到歌单</string>
    <string name="menu_detail">歌曲详情</string>
    <string name="menu_del">删除歌曲</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ensure">确定</string>

    <string name="title_start_point">动态线背景</string>
    <string name="title_scale">缩放</string>
    <string name="title_measure">测量</string>
    <string name="title_like">点赞</string>
    <string name="title_bubble">汽泡</string>
    <string name="title_clock">时钟</string>

    <string name="expand">展开</string>
    <string name="shrink">收缩</string>
    <string name="tips">这是一个可以伸缩展开并且带平缓过渡动画的自定义文本控件，你可以设置其展开的行数，伸缩收起的图标，伸缩收起的文本和颜色等\n</string>


    <string name="btn_simple">Simple</string>
    <string name="btn_animated">Animated</string>
    <string name="btn_bottom">bottom</string>
    <string name="btn_overlay">Overlay</string>
    <string name="btn_outside">Click outside</string>
    <string name="btn_inside">Click inside</string>
    <string name="btn_inside_modal">Click inside (Modal)</string>
    <string name="btn_modal_custom">Modal custom.</string>
    <string name="btn_no_arrow">No arrow</string>
    <string name="btn_custom_arrow">Arrow custom.</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_maxwidth">Max. width</string>
    <string name="curtom_tooltip">Custom Tooltip</string>
    <string name="edit_text">Edit Text</string>
    <string name="btn_in_dialog">Inside dialog</string>
    <string name="btn_close">Close</string>
    <string name="btn_dialog">Inside dialog</string>
    <string name="btn_center">Screen center</string>
    <string name="btn_overlay_rect">Overlay Rect</string>
    <string name="btn_overlay_rect_rounded">Overlay Rect Rounded</string>

    <style name="commonTextView">
        <item name="android:textColor">@android:color/black</item>
        <item name="android:textSize">14sp</item>
    </style>
</resources>
