<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_content_padding"
    tools:context="com.xxm.review.activity.ServiceActivity">


    <Button
        android:textAllCaps="false"
        android:text="@string/start_service"
        android:id="@+id/startService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:textAllCaps="false"
        android:text="@string/bind_service"
        android:id="@+id/bindService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <Button
        android:textAllCaps="false"
        android:text="@string/stop_service"
        android:id="@+id/stopService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
